# rustProjects

./: README  project2.rs
1_compress_file/: Cargo.toml
2_read_csv_file/: .gitignore  Cargo.toml
2_read_csv_file/src/: main.rs
3_read_json_data/: Cargo.toml
3_read_json_data/src/: main.rs
6_get_request/: Cargo.toml
7_async_await/: Cargo.toml
8_making_api_calls/src/: main.rs
9_port_sniffer_cli/: Cargo.toml
async_await/src/: main.rs
basic_auth/: Cargo.toml
basic_auth/src/: main.rs
compress_file/: compressed
compress_file/src/: main.rs
get_request/src/: main.rs
making_api_calls/: Cargo.toml
making_api_calls/src/: main.rs
read_json_data/src/: main.rs
unzip_file/: .gitignore  Cargo.toml
unzip_file/src/: main.rs
write_json_data/: Cargo.toml
write_json_data/src/: main.rs
