[package]
name = "async_await"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = '0.11.23', features = ['blocking', 'json']}
tokio = {version = '1.3.1', features = ['full']}
error-chain = '0.12.4'
